<resources>
    <string name="app_name">Exercise #1</string>
    <string name="ol_mundo">Hello 👋</string>

    <string name="greetings">Hello %s </string>

    <string name="hint_username">Your username here</string>
    <string name="hint_password">Your password here</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="error_credentials">Credentials Invalid</string>

    <string name="action_authenticate">Authenticate</string>

    <string name="snackbar_main">Hello</string>
    <string name="snackbar_btn">Accept</string>
    <string name="snackbar_message">Goodbye</string>

    <string name="btn_simpleDialog">Show Simple Dialog</string>
    <string name="btn_details">Go to Details</string>
    <string name="btn_snackbar">Show Snackbar</string>
    <string name="btn_camera">Activate Camera</string>
</resources>