<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coutdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ol_mundo"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings"
        app:layout_constraintRight_toRightOf="@id/greetings"
        app:layout_constraintLeft_toLeftOf="@id/greetings"
        android:layout_marginTop="170dp"
        android:visibility="invisible"
        />
<!--    app:layout_constraintRight_toLeftOf="@id/greetings"-->
<!--    app:layout_constraintTop_toTopOf="@id/greetings"-->

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        app:layout_constraintEnd_toStartOf="@+id/btn_show"
        app:layout_constraintBottom_toBottomOf="@id/btn_show"
        android:padding="10dp"
        android:layout_marginEnd="35dp"
        />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/c_o_imagem" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />
<!--        android:background="@drawable/ic_launcher_foreground"-->
    <Button
        android:id="@+id/btn_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/SimpleDialog"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"
        android:text="@string/btn_simpleDialog"
        />

    <Button
        android:id="@+id/details"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_details" />

    <Button
        android:id="@+id/camera"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="15dp"
        android:text="@string/btn_camera"
        />

    <Button
        android:id="@+id/snackbar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/SimpleDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:text="@string/btn_snackbar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>